--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 </head>
 <body>
     <div class="container">
-
         <h1>My Library</h1>
         <p>Hello! Welcome to your very own library! Here you can input all of your favorite books that you
             have read or would like to read. To get started press the "New Book" button to add a book to your library...</p>
@@ -17,8 +16,8 @@
             <button id="new-book-button">New Book</button>
         </div>
 
-        <div class="new-book-card">
-            <form id="form" action="/Script.js"></form>
+        <div class="new-book-card" style="display: none;">
+            <form id="new-book-form">
                 <div id="textInput"> 
                     <p><input type="text" id="title" name="title" placeholder="Title"></p>
                     <p><input type="text" id="author" name="author" placeholder="Author"></p>
@@ -27,7 +26,7 @@
                 <div id="read">
                     <p><label >Read: </label><input type="checkbox" id="read" name="read" value="yes"></p>
                 </div>
-                <button type="submit" form="form" id="add-button">Add</button>
+                <button type="submit" form="new-book-form" id="add-button">Add</button>
             </form>
         </div>
         
